@@ -21,6 +21,7 @@ from pyasn1.type import tag
 from pyasn1.type import univ
 
 from pyasn1_modules import rfc5280
+from pyasn1_modules import rfc6170
 
 MAX = float('inf')
 
@@ -161,6 +162,8 @@ LogotypeInfo.componentType = namedtype.NamedTypes(
 id_logo_background = univ.ObjectIdentifier('1.3.6.1.5.5.7.20.2')
 
 id_logo_loyalty = univ.ObjectIdentifier('1.3.6.1.5.5.7.20.1')
+
+id_logo_certImage = rfc6170.id_logo_certImage
 
 
 class OtherLogotypeInfo(univ.Sequence):
